# Eris

./: hardware.ino  plan.md  pyproject.toml
camera/: formula_cam.py
eris/: __init__.py  __main__.py  consts.py  lights.py  vehicle.py
eris/crofty/: __init__.py  comments.py
eris/race/: __init__.py  race.py
eris/stream/: __init__.py  formula_cam.py
