[tool.poetry]
name = "eris"
version = "0.1.0"
description = ""
authors = ["DTheLegend <me@daudi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anki-overdrive = {git="https://github.com/flyte/overdrive-python.git", markers = "sys_platform == 'linux'"}
fire = "^0.7.0"
opencv-python = "^4.10.0.84"
langchain-ollama = "^0.2.0"
gtts = "^2.5.3"
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
